Fix z-index topper

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 10000;
+  z-index: 10001;
 }
 
 /* Burger menu
